frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ca2
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 22137
  type: NodePort
